Add style for about us section

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,9 @@ header>.container>.mouse {
         transform: translateY(-45px);
       }
 }
-
+#about {
+    justify-content: center;
+    margin: 30px;
+}
 
 
