Add html to service section

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,5 +67,7 @@ header>.container>.mouse {
     justify-content: center;
     margin: 30px;
 }
-
+#about>.container>.row>.a-text{
+    padding: 10px;
+  }
 
