--- a/css/styles.css
+++ b/css/styles.css
@@ -63,78 +63,90 @@ header>.container>.mouse {
         transform: translateY(-45px);
       }
 }
-#about {
-    justify-content: center;
-    margin: 30px;
-}
-#about>.container.row>.paragraph {
-    padding: 10px;
-    margin-bottom: 20px;
-}
-#service {
-    padding-top: 20px;
-    background-image: url(../assets/backgrounds/s_image.jpg);
+.about{
+    color:black;
+  font-stretch: expanded;
+    text-align: center;
+  }
+.about1{
+    padding-bottom: 3%;
+  }
+  /* service section */
+  
+  #service{
+    /* background-color: blue; */
+    background-image: url("../assets/backgrounds/s_image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    color: white;
-    min-height: 40vh;
+    min-height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
-}
-
+    color: white;
+  }
+  #service>.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #service>.container>.row>.paragraph{
+    
+    padding: 10px;
+  }
+  
 .whatwedo h1{
     font-size: 24px;
     text-align: center;
     text-transform: uppercase;
-}
+  }
   
 .whatimages{
     text-align: center;
     padding-top: 3%;
     padding-bottom: 3%;
-}
+  }
   
-#designp,#devp, #productp{
+#designp, #devp, #productp{
     display: none;
     text-align: center;
-}
+  }
   
-#designp h1,#devp h1, #productp h1{
+#designp h1, #devp h1, #productp h1{
     font-weight: bold;
-}
+  }
 
-.portfolio h1{
+  .portfolio h1{
     text-align: center;
     padding-bottom: 3%;
     padding-top:3%;
-}
+  }
   
-.portfolio img{
+  .portfolio img{
   width:100%;
   height: auto;
-}
+  }
   
-.imgoverlay1,.imgoverlay2, .imgoverlay3,.imgoverlay4,.imgoverlay5,.imgoverlay6,.imgoverlay7,.imgoverlay8{
+  .imgoverlay1,.imgoverlay2, .imgoverlay3,.imgoverlay4,.imgoverlay5,.imgoverlay6,.imgoverlay7,.imgoverlay8{
     width:90%;
-    color:white;
-    height:97%;
-    position: absolute;
-    top:0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display:none;
-}
+      color:white;
+      height:97%;
+      position: absolute;
+      top:0;
+       background-color: rgba(0, 0, 0, 0.5);
+      display:none;
   
-.port1{
+  }
+  
+  .port1{
     padding-top:3%;
-}
+  }
   
-img.w-100 {
+  img.w-100 {
     padding-bottom: 3%;
-}
-.overlaycontent,.overlaycontent1,.overlaycontent2,.overlaycontent3,.overlaycontent4,.overlaycontent5,.overlaycontent6,.overlaycontent7{
+  }
+  .overlaycontent,.overlaycontent1,.overlaycontent2,.overlaycontent3,.overlaycontent4,.overlaycontent5,.overlaycontent6,.overlaycontent7{
   
    width:90%;
    margin-top: 4%;
@@ -142,14 +154,15 @@ img.w-100 {
    height: 90%;
    position: relative;
    border: 5px solid white;
-}
+  }
   
-.imgoverlay1 h1,.imgoverlay2 h1,.imgoverlay3 h1,.imgoverlay4 h1,.imgoverlay5 h1,.imgoverlay6 h1,.imgoverlay7 h1,.imgoverlay8 h1{
+  .imgoverlay1 h1,.imgoverlay2 h1,.imgoverlay3 h1,.imgoverlay4 h1,.imgoverlay5 h1,.imgoverlay6 h1,.imgoverlay7 h1,.imgoverlay8 h1{
       padding-top: 3%;
       text-align: left;
       font-weight: 800px;
       font-size: 30px
-}
+  
+  }
    
 
 
